// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-password Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  labelOnTop: true,
  tooltip: 'Tooltip message'
}: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--password mg-input--readonly mg-input--width-full">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
      </div>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: 'blu'
}: 1`] = `
<mg-input-password value="blu">
  <mock:shadow-root>
    <div class="mg-input mg-input--password mg-input--readonly mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong>
          •••
        </strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--password mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <input aria-describedby="" class="mg-input__box" id="identifier" name="identifier" type="password">
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message',
  labelOnTop: true
}: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--password mg-input--width-full">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
        <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
          <mg-icon icon="info-circle"></mg-icon>
        </mg-tooltip>
      </div>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <input aria-describedby="" class="mg-input__box" id="identifier" name="identifier" type="password">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { label: 'label', identifier: 'identifier' }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--password mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <input aria-describedby="" class="mg-input__box" id="identifier" name="identifier" type="password">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { label: 'label', identifier: 'identifier', labelHide: true }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--password mg-input--width-full">
      <mg-input-title class="sr-only" identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <input aria-describedby="" class="mg-input__box" id="identifier" name="identifier" type="password">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { label: 'label', identifier: 'identifier', labelOnTop: true }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--password mg-input--width-full">
      <div class="mg-input__title">
        <mg-input-title identifier="identifier">
          label
        </mg-input-title>
      </div>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <input aria-describedby="" class="mg-input__box" id="identifier" name="identifier" type="password">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should render with args { label: 'label', identifier: 'identifier', readonly: true }: 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--password mg-input--readonly mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password Should trigger events 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--password mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <input aria-describedby="identifier-help-text" class="mg-input__box" id="identifier" name="identifier" type="password">
        </div>
        <div class="mg-input__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password display error message with locale: fr 1`] = `
<mg-input-password lang="fr">
  <mock:shadow-root>
    <div class="is-not-valid mg-input mg-input--password mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <input aria-describedby="identifier-error" class="mg-input__box" id="identifier" name="identifier" required="" type="password">
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          Ce champ est obligatoire.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password display error message with locale: xx 1`] = `
<mg-input-password lang="xx">
  <mock:shadow-root>
    <div class="is-not-valid mg-input mg-input--password mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <input aria-describedby="identifier-error" class="mg-input__box" id="identifier" name="identifier" required="" type="password">
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password display error with displayError component's public method 1`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="mg-input mg-input--password mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <input aria-describedby="" class="mg-input__box" id="identifier" name="identifier" required="" type="password">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password display error with displayError component's public method 2`] = `
<mg-input-password>
  <mock:shadow-root>
    <div class="is-not-valid mg-input mg-input--password mg-input--width-full">
      <mg-input-title identifier="identifier" required="">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <input aria-describedby="identifier-error" class="mg-input__box" id="identifier" name="identifier" required="" type="password">
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password validity, case next state is disabled validity ({ validity: false, valueMissing: true }), valueMissing (%s) 1`] = `
<mg-input-password patternerrormessage="Non">
  <mock:shadow-root>
    <div class="is-not-valid mg-input mg-input--password mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <input aria-describedby="identifier-error" class="mg-input__box" id="identifier" name="identifier" type="password">
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password validity, case next state is disabled validity ({ validity: false, valueMissing: true }), valueMissing (%s) 2`] = `
<mg-input-password patternerrormessage="Non">
  <mock:shadow-root>
    <div class="mg-input mg-input--password mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <input aria-describedby="identifier-error" class="mg-input__box" disabled="" id="identifier" name="identifier" type="password">
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password validity, case next state is readonly validity ({ validity: false, valueMissing: true }), valueMissing (%s) 1`] = `
<mg-input-password patternerrormessage="Non">
  <mock:shadow-root>
    <div class="is-not-valid mg-input mg-input--password mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <div class="mg-input__input">
          <input aria-describedby="identifier-error" class="mg-input__box" id="identifier" name="identifier" type="password">
        </div>
        <div aria-live="assertive" class="mg-input__error" id="identifier-error">
          This field is required.
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;

exports[`mg-input-password validity, case next state is readonly validity ({ validity: false, valueMissing: true }), valueMissing (%s) 2`] = `
<mg-input-password patternerrormessage="Non">
  <mock:shadow-root>
    <div class="mg-input mg-input--password mg-input--readonly mg-input--width-full">
      <mg-input-title identifier="identifier">
        label
      </mg-input-title>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-password>
`;
